Refactor event date handling and validation in controllers and services